fix(notebook): More informative messages when peak/distribs where not found

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -1146,13 +1146,21 @@
     "        rmax = np.argwhere(dfDistrib.radius.values < rmax)[-1][0]\n",
     "        #print(rmin, rmax)\n",
     "        dfDistrib = dfDistrib[rmin:rmax+1]\n",
+    "    exitMsgPrefix = f\"Skipping '{continResultDir.name}': \"\n",
     "    if all(dfDistrib.distrib == 0.):\n",
+    "        print(exitMsgPrefix + \"No distribution!\")\n",
     "        return {} # skip this one, no distribution found\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
     "    if varmap.get('score', 1.0) > countRateScoreMax:\n",
-    "        return {} # skip this one, data score too bad\n",
-    "    if not len(distrib.peaks) or distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
-    "        return {} # skip this one, distribution peak uncertainty to large\n",
+    "        print(exitMsgPrefix + f\"Data score too bad ({varmap.get('score', 1.0)} > {countRateScoreMax})!\")\n",
+    "        return {}\n",
+    "    if not len(distrib.peaks):\n",
+    "        print(exitMsgPrefix + \"No peaks found!\")\n",
+    "        return {}\n",
+    "    uncertRatio = distrib.uncertRatioMedian(distrib.peaks[0])\n",
+    "    if uncertRatio > uncertRatioMax:\n",
+    "        print(exitMsgPrefix + f\"Distribution peak uncertainty to large ({uncertRatio} > {uncertRatioMax})!\")\n",
+    "        return {}\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
